--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript" src="/swreg.js"></script>
     <script src="/app.js"></script>
   </body>
 </html>
